--- a/src/pages/filter/section/section.css
+++ b/src/pages/filter/section/section.css
@@ -7,32 +7,28 @@
 
 .filtersection-container{
     overflow: hidden;
-    height: 91.5vh;
+    height: 87vh;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .section-container-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    max-width: 100%;
-    margin-top:100px;
-    background-color:rgba(231, 240, 255, 0.7);
-    overflow-y: hidden; /* 위와 아래 스크롤 숨기기 */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%; /* 혹은 다른 값을 설정하여 레이아웃을 조정 */
+  background-image: url('/public/filter_main.jpg');
+  background-size: 100%; 
 }
 
 .section-box {
-  position: relative;
-    margin-top: 5%; /* 예시로 위쪽에 여백 추가 */
-    margin-bottom: 2%;
     padding: 10px;
-    border: 1px solid black;
-    height: 75vh;
-    width: 65%;
+    border: 1px solid rgb(197, 197, 197);
+    border-radius: 15px;
+    width: 50%;
+    height: auto;
     background-color: white;
-    align-items: center;
-    position: relative; /* section-box를 relative로 설정 */
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
 }
 
 .section1-button-container {
@@ -40,25 +36,23 @@
   bottom: 20px; /* 아래에 위치하되, 조금 위로 올려줌 */
   left: 0; /* 좌측에 위치하도록 설정 */
   width: 100%; /* 가로 폭을 100%로 설정 */
-  text-align: center; /* 가운데 정렬 */  z-index: 1; /* 다른 요소 위에 오도록 설정 */
-  margin-top: 60px;
-  margin-bottom:20px;
+  text-align: center; /* 가운데 정렬 */
 }
 
 button.section1-button {
   pointer-events: auto;
-  padding: 20px 35px;
+  padding: 10px 50px;
   font-family: 'Noto Sans KR', sans-serif;
-  font-size: 35px;
-  border: 1px solid rgba(5, 5, 5, 0.1);
-  border-radius: 15px;
+  font-size: 20px;
+  border: none;
+  border-radius: 10px;
   cursor: pointer;
-  background-color:rgba(205, 203, 203, 0.516) ;
-  color: #000;
+  background-color: #2c2c2c;
+  color: #e5e5e5;
 }
 
 .section1-button:hover {
-  background-color: #908e8eee;
+  background-color: #3c3c3cee;
 }
 
 .link {
@@ -66,61 +60,27 @@ button.section1-button {
   color: #000;
 }
 
-/*텍스트랑 이미지 */
-
-.section-icon-div {
-  display: flex;
-}
-
-.section-icon {
-  width: 80px;
-  margin-bottom: 0;
-  margin-right: 30px;
-  margin-left: 25px;
-  margin-top:10px
-}
-
-.hr {
-  transform: rotate(0deg);
-  width: 850px; /* 가로 길이를 조절합니다. */
-  height: 4px; /* 세로 길이를 조절합니다. */
-  border: none; /* 기본 테두리를 제거합니다. */
-   /* 가로 선의 두께와 색상을 설정합니다. */
-  margin-left: 30px; /* 좌측 여백을 설정합니다. */
- margin-top: 45px;
- background-color: rgba(66, 196, 196, 0.6);
-}
-
 .section-text1 {
   font-family: 'Noto Sans KR', sans-serif;
     font-size: 20px;
     font-weight: 100;
-    margin-top: 50px;
-    margin-bottom: 2px;
-    margin-left:20px;
     text-align: left;
-  
 }
 
 .section-text2 {
   font-family: 'Noto Sans KR', sans-serif;
     font-size: 40px;
     font-weight: 500;
-    margin-top: 5px;
-    margin-bottom: 5%;
-    margin-left:15px;
     text-align: left;
 
 }
 /*체크박스 형태*/
 .select-area {
   display: flex;
-  justify-content: center; /* 수평 가운데 정렬 */
 }
 
 .select-area ul {
   display: flex;
-  justify-content: center;
   list-style-type: none; /* 기본 리스트 마커 제거 */
   padding: 0; /* 내부 패딩 제거 */
   }
@@ -128,15 +88,13 @@ button.section1-button {
   .select-area li {
     flex: 1;
     text-align: left;
-    margin-left:5%;
-    margin-right: 5%;
   }
 
   .checkbox-label {
     display: inline-block;
-    padding: 18px 38px;
-    margin: 15px;
-    border: 2px solid #000;
+    padding: 10px 30px;
+    margin: 12px 10px;
+    border: 2px solid #b2b2b2;
     border-radius: 15px;
     cursor: pointer;
     font-family: 'Noto Sans KR', sans-serif;
@@ -151,35 +109,15 @@ button.section1-button {
 
   .checkbox-input {
     opacity: 0;
-    position: absolute;
-    padding: 40px 50px;
-    
+    position: absolute;   
   }
-
-
   
   /* 선택된 상태일 때 배경색 변경 */
   .checkbox-label.selected {
+    padding: 10px 30px;
     background-color: #d8d7d7;
   }
 
-
-  .icon-wrapper {
-    position: relative;
-    display: flex;
-    
-  }
-  
-  .icon {
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -90%);
-    /* top: 50%;
-    left: 100%;
-    transform: translate(-88%, -70%); */
-    font-size: 55px; /* 아이콘의 크기 조절 */
-  }
 
   /*팝업*/
   .popup-overlay {
