--- a/src/pages/filter/section/section.css
+++ b/src/pages/filter/section/section.css
@@ -7,7 +7,7 @@
 
 .filtersection-container{
     overflow: hidden;
-    height: 87vh;
+    height: 100vh;
     font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -17,25 +17,22 @@
   align-items: center;
   justify-content: center;
   height: 100%; /* 혹은 다른 값을 설정하여 레이아웃을 조정 */
-  background-image: url('/public/filter_main.jpg');
+  background-image: url('/public/filtermain.jpg');
   background-size: 100%; 
 }
 
 .section-box {
-    padding: 10px;
-    border: 1px solid rgb(197, 197, 197);
-    border-radius: 15px;
+    padding: 15px;
+    border: none; 
+    border-radius: 5px;
     width: 50%;
-    height: auto;
-    background-color: white;
-    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
+    height: 60%;
+    background-color: rgba(35, 35, 35, 0.577);
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.57);
 }
 
 .section1-button-container {
   position: relative; /* 절대 위치로 설정 */
-  bottom: 20px; /* 아래에 위치하되, 조금 위로 올려줌 */
-  left: 0; /* 좌측에 위치하도록 설정 */
-  width: 100%; /* 가로 폭을 100%로 설정 */
   text-align: center; /* 가운데 정렬 */
 }
 
@@ -47,12 +44,12 @@ button.section1-button {
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  background-color: #2c2c2c;
-  color: #e5e5e5;
+  background-color: #e7e7e7d3;
+  color: #252525;
 }
 
 .section1-button:hover {
-  background-color: #3c3c3cee;
+  background-color: rgba(197, 197, 197, 0.577);
 }
 
 .link {
@@ -62,49 +59,40 @@ button.section1-button {
 
 .section-text1 {
   font-family: 'Noto Sans KR', sans-serif;
-    font-size: 20px;
-    font-weight: 100;
-    text-align: left;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: left;
+  color : #e5e5e5;
+  margin-top : 50px;
+  margin-bottom: 10px;
+  margin-left: 15px;
 }
 
 .section-text2 {
   font-family: 'Noto Sans KR', sans-serif;
-    font-size: 40px;
-    font-weight: 500;
-    text-align: left;
-
-}
-/*체크박스 형태*/
-.select-area {
-  display: flex;
+  font-size: 35px;
+  margin-bottom: 15px;
+  font-weight: 400;
+  text-align: left;
+  color : #e5e5e5;
+  margin-left: 15px;
 }
 
-.select-area ul {
-  display: flex;
-  list-style-type: none; /* 기본 리스트 마커 제거 */
-  padding: 0; /* 내부 패딩 제거 */
-  }
-
-  .select-area li {
-    flex: 1;
-    text-align: left;
-  }
-
-  .checkbox-label {
-    display: inline-block;
-    padding: 10px 30px;
-    margin: 12px 10px;
-    border: 2px solid #b2b2b2;
-    border-radius: 15px;
-    cursor: pointer;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 30px;
-    text-align: center;
+.checkbox-label {
+   display: inline-block;
+   padding: 10px 30px;
+   margin: 12px 10px;
+   border: 2px solid #b2b2b2;
+   border-radius: 15px;
+   cursor: pointer;
+   font-family: 'Noto Sans KR', sans-serif;
+   font-size: 30px;
+   color :#d8d7d7;
   }
   
   /* 마우스가 올라갔을 때 포인터 모양으로 변경 */
   .checkbox-label:hover {
-    background-color: #eeee;
+    background-color: #e7e7e77c;
   }
 
   .checkbox-input {
@@ -115,7 +103,9 @@ button.section1-button {
   /* 선택된 상태일 때 배경색 변경 */
   .checkbox-label.selected {
     padding: 10px 30px;
-    background-color: #d8d7d7;
+    background-color: #e7e7e7c8;
+    color: #2c2c2c;
+    border: 2px solid #ffffff;
   }
 
 
