--- a/src/pages/filter/filter-main/filter-main.css
+++ b/src/pages/filter/filter-main/filter-main.css
@@ -7,16 +7,14 @@
   font-style: normal;
 }
 
-/* background-color:rgba(231, 240, 255, 0.7); */
-
 /* .notosanskr * { 
  font-family: 'Noto Sans KR', sans-serif;
 } */
-/* background-color: rgba(231, 240, 255, 0.7); */
+
 
 .filtermain-container{
   overflow: hidden;
-  height: 100vh;
+  height: 90vh;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -26,7 +24,7 @@
   align-items: center;
   justify-content: center;
   height: 100%; /* 혹은 다른 값을 설정하여 레이아웃을 조정 */
-  background-image: url('/public/filtermain.jpg');
+  background-image: url('/public/filter/filtermain.jpg');
   background-size: 100%; 
   font-family: 'Noto Sans KR', sans-serif;
 }
@@ -35,84 +33,73 @@
 .filter-text {
   text-align: center;
   font-family: 'Noto Sans KR', sans-serif;
-  margin-bottom: 130px;
-}
-
-/* 여행지추천 */
-.text-main {
-  font-family: 'JalnanGothic';
-  font-size: 55px;
-  color: #ffffff;
-  letter-spacing: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 100px;
 }
 
 .text-user {
   font-size: 25px;
   font-weight: 600;
-  margin-bottom: 10px;
-  color : #e5e5e5;
-  /* background-color: #a0a0a079;
-  padding: 2px 2px;
-  border-radius: 10px; */
+  margin-bottom: 50px;
+  color : #ffffff;
+  background-color: #ffffff3b;
+  border-radius: 30px;
+  padding: 0px 0px 3px;
+  width: 500px;
+}
+
+
+/* 여행지추천 */
+.text-main {
+  font-family: 'JalnanGothic';
+  font-size: 65px;
+
+  color: #ffffff;
+  letter-spacing: 7px;
+  margin-bottom: 20px;
+  
 }
 
 .text-ex {
-  font-size: 16px;
-  color: #e9e9e9c4;
+  font-size: 17px;
+  color : #e5e5e5;
 }
 
-.glassButton {
-  background: #bebec8;
-  padding: 5px;
-  width : 200px;
-  border-radius: 10px;
-  text-align: center;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.glassButton:hover{
-  background-color: #a0a0a0; /* 호버 시 배경색 변경 */
-  transition: background-color 0.5s ease; /* 호버 효과를 부드럽게 만들기 위한 transition 속성 추가 */
+@keyframes moveIcon {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 .button-start {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #2c2c2c;
+  color: #ffffff;
+  border: none;
+  border-radius: 30px;
+  padding: 15px 25px;
+  font-size: 20px;
+  font-weight: 400;
   text-decoration: none;
-  color: #fff;
-  font-size: 30px;
+  cursor: pointer;
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.577);
+  transition: all 0.3s ease;
 }
 
-.main-popup {
-  position: fixed; /* 고정 위치 */
-  top: 50%; /* 화면 세로 중앙에 위치 */
-  left: 50%; /* 화면 가로 중앙에 위치 */
-  transform: translate(-50%, -50%); /* 세로, 가로 중앙 정렬을 위한 변형 */
-  padding: 30px 50px;
-  border-radius: 10px;
-  z-index: 1000; /* 다른 요소 위에 표시 */
-  background-color: rgb(255, 255, 255); /* 배경색 및 투명도 지정 */
-  text-align: center; /* 버튼 가운데 정렬 */
-  border: 1px solid #b5b5b5;
+.button-start:hover {
+  background-color: #444444;
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.577);
 }
 
-.main-popup-content {
-  color: #afafaf; /* 텍스트 색상 */
-}
-
-.main-popup-content p {
-  margin: 0; /* 문단의 상하 여백 제거 */
-}
-
-.main-popup-content button {
-  background-color: #cecece; /* 버튼 배경색 */
-  color: white; /* 버튼 텍스트 색상 */
-  border: none; /* 테두리 제거 */
-  padding: 5px 15px; /* 버튼 안쪽 여백 */
-  border-radius: 10px; /* 버튼 모서리 둥글게 */
-  cursor: pointer; /* 커서 스타일 변경 */
-  margin-top: 20px; /* 위쪽 여백 추가 */
-}
-
-.main-popup-content button:hover {
-  background-color: #5b5b5b; /* 호버 시 배경색 변경 */
+.start-icon {
+  margin-right: 10px;
+  font-size: 24px;
+  animation: moveIcon 1s infinite alternate;
 }
