--- a/src/pages/filter/section/section.css
+++ b/src/pages/filter/section/section.css
@@ -7,7 +7,7 @@
 
 .filtersection-container{
     overflow: hidden;
-    height: 100vh;
+    height: 90vh;
     font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -17,45 +17,40 @@
   align-items: center;
   justify-content: center;
   height: 100%; /* 혹은 다른 값을 설정하여 레이아웃을 조정 */
-  background-image: url('/public/filtermain.jpg');
+  background-image: url('/public/filter/filtermain.jpg');
   background-size: 100%; 
 }
 
 .section-box {
-    padding: 15px;
-    border: none; 
-    border-radius: 5px;
-    width: 50%;
-    height: 60%;
-    background-color: rgba(35, 35, 35, 0.577);
-    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.57);
+  padding: 15px;
+  border: none; 
+  border-radius: 5px;
+  width: 900px;
+  height: 60%;
+  background-color: rgba(35, 35, 35, 0.577);
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.57);
+  text-align: center; /* checkbox-label 가운데 정렬을 위한 추가 */
 }
 
-.section1-button-container {
-  position: relative; /* 절대 위치로 설정 */
-  text-align: center; /* 가운데 정렬 */
-}
 
-button.section1-button {
-  pointer-events: auto;
+.section-button {
   padding: 10px 50px;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 20px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  background-color: #e7e7e7d3;
+  background-color: #ffffffd3;
   color: #252525;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .section1-button:hover {
   background-color: rgba(197, 197, 197, 0.577);
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-.link {
-  text-decoration: none;
-  color: #000;
-}
 
 .section-text1 {
   font-family: 'Noto Sans KR', sans-serif;
@@ -65,90 +60,81 @@ button.section1-button {
   color : #e5e5e5;
   margin-top : 50px;
   margin-bottom: 10px;
-  margin-left: 15px;
+  margin-left: 30px;
 }
 
 .section-text2 {
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 35px;
   margin-bottom: 15px;
-  font-weight: 400;
+  font-weight: 600;
   text-align: left;
   color : #e5e5e5;
   margin-left: 15px;
 }
 
+.rightrow {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  text-align: left;
+  color : #e5e5e5;
+  margin-left: 15px;
+  margin-bottom: -2px;
+}
+
+
 .checkbox-label {
    display: inline-block;
-   padding: 10px 30px;
+   padding: 9px 30px;
    margin: 12px 10px;
    border: 2px solid #b2b2b2;
-   border-radius: 15px;
+   border-radius: 10px;
    cursor: pointer;
    font-family: 'Noto Sans KR', sans-serif;
    font-size: 30px;
    color :#d8d7d7;
   }
   
-  /* 마우스가 올라갔을 때 포인터 모양으로 변경 */
   .checkbox-label:hover {
     background-color: #e7e7e77c;
   }
 
-  .checkbox-input {
-    opacity: 0;
-    position: absolute;   
-  }
-  
-  /* 선택된 상태일 때 배경색 변경 */
   .checkbox-label.selected {
-    padding: 10px 30px;
     background-color: #e7e7e7c8;
+    font-family: 'Noto Sans KR', sans-serif;
     color: #2c2c2c;
-    border: 2px solid #ffffff;
+    font-weight: 500;
   }
 
-
-  /*팝업*/
-  .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 반투명한 검은 배경 */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
   .popup {
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255);
+    width: 300px;
+    padding: 13px; /* 내부 여백 */
+    border-radius: 8px; /* 둥근 모서리 */
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: rgb(24, 24, 24); /* 텍스트 색상 */
+    text-align: center; /* 내용 중앙 정렬 */
   }
   
-  .popup-content {
-    text-align: center;
-    
+  .popup button {
+    background-color: #2c2c2c; /* 닫기 버튼 배경색 */
+    color: white; /* 닫기 버튼 텍스트 색상 */
+    border: none; /* 테두리 없음 */
+    padding: 8px 20px; /* 내부 여백 */
+    border-radius: 5px; /* 둥근 모서리 */
+    cursor: pointer; /* 마우스 포인터를 손가락으로 변경 */
+    margin-top: 0px; /* 위쪽 여백 */
+    margin-bottom: 10px;
   }
   
-  .popup-content p {
-    margin-bottom: 25px;
-  
-  }
-  
-  .popup-content button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .popup-content button:hover {
-    background-color: #0056b3;
+  .popup button:hover {
+    background-color: #6f6f6f; /* 마우스 호버 시 버튼 배경색 변경 */
   }
   
