--- a/src/pages/user/login/login.css
+++ b/src/pages/user/login/login.css
@@ -19,7 +19,7 @@
   .login-form {
     width: 100%;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #7b7b7b;
     border-radius: 8px;
   }
   
@@ -28,7 +28,7 @@
     margin-bottom: 20px;
     padding: 8px;
     border-radius: 4px;
-    border: 1px solid black; /* 기본 테두리 색상은 검은색으로 설정 */
+    border: 1px solid rgb(152, 152, 152); /* 기본 테두리 색상은 검은색으로 설정 */
     margin-top: 5px;
   }
   
@@ -51,19 +51,19 @@
     width: 100%;
     text-align: center;
     margin-top:30px;
-
   }
   
   .login-styled-button {
     padding: 8px 10px;
     width: 150px; /*버튼 가로 크기 조절*/
-    background-color: rgb(0, 0, 0);
+    background-color: #2c2c2c;
     color: rgb(255, 255, 255);
     border: none;
     /* border-radius: 10px; */
     cursor: pointer;
     font-family: 'Noto Sans KR', sans-serif;
     margin-top: 30px;
+    border-radius: 5px;
   }
 
   .login-styled-button:hover {
@@ -75,6 +75,7 @@
     font-size: 45px;
     font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+  color: #2c2c2c;
   font-style: normal;
     /* font-weight: 900; */
     letter-spacing: 3px; 
