--- a/src/pages/user/signup/signup.css
+++ b/src/pages/user/signup/signup.css
@@ -29,7 +29,7 @@
   .sign-up-form {
     width: 100%;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #7b7b7b;
     border-radius: 8px;
     margin-bottom: 30px;
     
@@ -39,8 +39,8 @@
     width: calc(100% - 16px);
     margin-bottom: 20px;
     padding: 8px;
-    border: 1px solid black;
     border-radius: 4px;
+    border: 1px solid rgb(152, 152, 152); /* 기본 테두리 색상은 검은색으로 설정 */
     margin-top: 5px;
   }
   
@@ -79,20 +79,22 @@
   .signup-styled-button {
     padding: 8px 10px;
     width: 150px; /*버튼 가로 크기 조절*/
-    background-color: rgb(0, 0, 0);
+    background-color: #2c2c2c;
     color: rgb(255, 255, 255);
     border: none;
     /* border-radius: 10px; */
     cursor: pointer;
     font-family: 'Noto Sans KR', sans-serif;
     margin-top: 30px;
+    border-radius: 5px;
   }
   
   .title {
     font-size: 45px;
     font-family: "Ubuntu", sans-serif;
-  font-weight: 700;
-  font-style: normal;
+    font-weight: 700;
+    color: #2c2c2c;
+    font-style: normal;
     /* font-weight: 900; */
     letter-spacing: 3px; 
     margin-bottom: 3px;
