--- a/src/pages/chatbot/chatbot.css
+++ b/src/pages/chatbot/chatbot.css
@@ -4,14 +4,16 @@
  font-family: 'Noto Sans KR', sans-serif;
 } */
 
+.draggable-container {
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+}
 
 .custom-chatbot {
-    position: fixed;
-    bottom: 100px; /* 화면 하단과의 거리 조절 */
-    right: 20px; /* 화면 우측과의 거리 조절 */
-    font-family: 'Noto Sans KR', sans-serif;
-  }
-  
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
   /* 챗봇 메시지 스타일 */
   .custom-chatbot .rsc-ts-bubble {
     background-color: #343434; /* 배경 색상 설정 */
@@ -25,6 +27,7 @@
   }
 
   .custom-chatbot .rsc-header {
+    cursor: move; /* Make the header a draggable handle */
     background-color: #343434; /* 상단 배너 배경 색상 설정 */
     color: #fff; /* 상단 배너 텍스트 색상 설정 */
     font-family: 'Noto Sans KR', sans-serif;
