--- a/src/pages/board/tripboard/imageModal.css
+++ b/src/pages/board/tripboard/imageModal.css
@@ -4,21 +4,21 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
-    max-width: 80%;
-    max-height: 100%;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 60%; /* 추가: modal-image의 최대 너비와 일치 */
+    width: auto;
 }
 
 .modal-image {
-    width: 80%;
+    width: 100%;
     height: auto;
-    border-radius: 5px;
-    padding: 5px;
 }
