--- a/src/pages/board/addpost.css
+++ b/src/pages/board/addpost.css
@@ -4,7 +4,8 @@
 .form-container {
   max-width: 70%;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   padding: 40px;
   border-radius: 15px;
   background-color: #f2f2f2;
@@ -48,12 +49,13 @@
 }
 
 .button {
-  background-color: #007bff;
+  font-family: 'Noto Sans KR', sans-serif;
+  background-color: #2c2c2c;
   letter-spacing: 3px;
   color: #fff;
   border: none;
-  border-radius: 15px;
-  padding: 10px 20px;
+  border-radius: 10px;
+  padding: 8px 20px;
   text-align: center;
   font-size: 16px;
   width : 7%; 
@@ -61,10 +63,11 @@
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #595959;
 }
 
 .modal {
+  font-family: 'Noto Sans KR', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,9 +79,9 @@
   background-color: rgba(0, 0, 0, 0.5); /* 배경을 어둡게 */
 }
 
-.modal-content {
+.modal-content2 {
   background-color: white;
-  padding: 35px; /* 내부 패딩을 조절하여 모달 크기 조정 */
+  padding: 30px; /* 내부 패딩을 조절하여 모달 크기 조정 */
   margin: 0 auto;
   border-radius: 10px;
   text-align: center;
@@ -90,28 +93,30 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  gap:25px;
+  gap:20px;
   border:none;
 }
 
-.modal-content button {
-  padding: 5px 30px;
-  border-radius: 10px;
+.modal-content2 button {
+  font-family: 'Noto Sans KR', sans-serif;
+  padding: 8px 33px;
+  border-radius: 5px;
   letter-spacing: 3px;
   font-size: 13px;
   cursor: pointer;
   border:none;
   text-align: center;
   margin-top: 23px;
-  background-color: #007bff;
+  background-color: #2c2c2c;
   color: white;
 }
 
-.modal-content button:hover {
-  background-color: #0056b3;
+.modal-content2 button:hover {
+  background-color: #595959;
 }
 
 .custom-error-message {
+  font-family: 'Noto Sans KR', sans-serif;
   color: red; /* 오류 메시지 텍스트의 색상을 빨간색으로 설정합니다. */
   font-size: 15px; /* 오류 메시지 텍스트의 글꼴 크기를 설정합니다. */
   margin-top: 10px; /* 오류 메시지와 다른 요소 사이의 위쪽 여백을 설정합니다. */
