--- a/src/pages/chatbot/chatbot.css
+++ b/src/pages/chatbot/chatbot.css
@@ -16,20 +16,24 @@
 
   /* 챗봇 메시지 스타일 */
   .custom-chatbot .rsc-ts-bubble {
-    background-color: #343434; /* 배경 색상 설정 */
-    color: #fff; /* 텍스트 색상 설정 */
+    background-color: #f8f8f8; /* 배경 색상 설정 */
+    color : #494949;
     font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 500;
+    border: 1px solid #dddddd;
   }
 
   .custom-chatbot .rsc-os-option-element {
-    background-color: #343434; /* 옵션 버튼 배경 색상 설정 */
-    color: #fff; /* 옵션 버튼 텍스트 색상 설정 */
+    background-color: #f8f8f8; /* 배경 색상 설정 */
+    color : #494949;
+    font-weight: 400;
+    border: 1px solid #dddddd;
   }
 
   .custom-chatbot .rsc-header {
     cursor: move; /* Make the header a draggable handle */
-    background-color: #343434; /* 상단 배너 배경 색상 설정 */
-    color: #fff; /* 상단 배너 텍스트 색상 설정 */
+    background-color: #2c2c2c; /* 상단 배너 배경 색상 설정 */
+    color : #f1f1f1;
     font-family: 'Noto Sans KR', sans-serif;
   }
 
