--- a/src/pages/board/tripboard/imageModal.css
+++ b/src/pages/board/tripboard/imageModal.css
@@ -12,18 +12,27 @@
 
 .modal-content {
     background-color: white;
-    padding: 30px; /* 내부 패딩을 조절하여 모달 크기 조정 */
+    padding: 30px;
     margin: 0 auto;
-    border-radius: 10px;
+    border-radius: 5px;
     text-align: center;
+    max-width: 80%;
+    max-height: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 60%; /* 추가: modal-image의 최대 너비와 일치 */
-    width: auto;
+    overflow: auto; /* 내용이 넘칠 때 스크롤 가능하도록 */
+    box-sizing: border-box; /* padding이 포함된 전체 크기 설정 */
 }
 
 .modal-image {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.modal-content img {
+    max-width: 100%;
     height: auto;
 }
