--- a/src/pages/board/tripboard/tripboardlist.css
+++ b/src/pages/board/tripboard/tripboardlist.css
@@ -1,5 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
+/* font-family: 'Noto Sans KR', sans-serif; */
+
 .trip-board-banner {
   position: relative; /* 위치 지정 */
   text-align: center; /* 이미지와 텍스트를 가운데 정렬합니다. */
@@ -115,7 +117,7 @@
 
 /* 게시글 작성자 */
 .post-data:nth-child(3) {
-  flex: 1; /* 작성자 칸의 크기를 조정합니다. */
+  flex: 1.3; /* 작성자 칸의 크기를 조정합니다. */
   text-align: center;
 }
 
