--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap');
+
 /* font-family: 'Noto Sans KR', sans-serif; */
 
 @font-face {
@@ -90,18 +92,16 @@
   display: flex;
   justify-content: space-between;
   width: 1300px;
-  margin: 0 auto;
-  margin-top: 5px;
+  margin: 40px auto 0 auto;
   font-family: 'Noto Sans KR', sans-serif;
   text-decoration: none;
-  position: relative; /* Ensure relative positioning for absolute child elements */
+  position: relative;
 }
 
 .func1, .func2, .func3, .func4 {
   background-color: #ffffff;
   width: 250px;
   height: 200px;
-  margin-bottom: 15px;
   padding: 25px;
   font-size: 25px;
   color: #191919;
@@ -110,7 +110,7 @@
   border-radius: 8px;
   font-family: 'JalnanGothic';
   transition: transform 0.2s ease;
-  position: relative; /* Ensure relative positioning for absolute child elements */
+  position: relative;
 }
 
 .moveto {
@@ -189,16 +189,20 @@
 
 .footer {
   background-color: #ffffff;
-  padding: 25px;
+  height: 60px;
   bottom: 0;
-  width: 97%;
-  margin-top: 70px;
-  border-top: 1px solid #e0e0e0;
+  width: 100%;
+  margin-top: 100px;
+  border-top: 1px solid #e1e1e1;
+  display: flex;
+  align-items: center;
 }
+
 
 .footer-text{
   font-size: 12px;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 600;
   color: #8d8d8d;
+  margin-left: 30px;
 }
