--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -214,7 +214,34 @@
   }
 
   .delete-button:hover {
-    background-color: grey;
+    background-color: rgb(200, 200, 200);
   }
 
-  /* 추가적인 스타일링을 원하실 경우 여기에 추가하세요 */
+  .marker-label {
+    position: absolute;
+    top: 0px; /* 원하는 만큼 상단으로 이동 */
+    left: 0px; /* 원하는 만큼 좌측으로 이동 */
+    background-color: #fff;
+    color: #000;
+    font-size: 12px;
+    padding: 3px 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+    font-family: 'Noto Sans KR', sans-serif;
+    white-space: nowrap;
+  }
+  
+  
+  .custom-infowindow {
+    padding: 5px 10px;
+    background-color: #fff;
+    border : 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+  }
+  
+  
