--- a/src/pages/filter/section/section.css
+++ b/src/pages/filter/section/section.css
@@ -26,7 +26,7 @@
   border: none; 
   border-radius: 5px;
   width: 900px;
-  height: 60%;
+  height: 500px;
   background-color: rgba(35, 35, 35, 0.577);
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.57);
   text-align: center; /* checkbox-label 가운데 정렬을 위한 추가 */
