--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -234,7 +234,7 @@
   flex-direction: column;
   align-items: center; /* Vertical centering */
   text-align: center; /* Center align internal elements */
-  background-color: rgba(255, 255, 255, 0.902);
+  background-color: rgba(255, 255, 255, 0.95);
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -246,6 +246,8 @@
   font-family: 'Noto Sans KR', sans-serif;
   text-align: center; /* Center align text */
   width: 100%; /* Ensure full width to center align properly */
+  font-size: 25px;
+  font-weight: 700;
 }
 
 .Ex-popup-inner1 .ex-text{
@@ -257,7 +259,7 @@
 
 .Ex-popup-inner1 button {
   padding: 10px 20px;
-  background-color: #65a8ef;
+  background-color: #252525;
   color: white;
   border: none;
   border-radius: 5px;
@@ -267,5 +269,12 @@
 }
 
 .Ex-popup-inner1 button:hover {
-  background-color: #046ddc;
+  background-color: #424242;
+}
+
+.ex-containter {
+  /* border-top: 1px solid; */
+  padding-left:10px;
+  padding-right: 10px;
+  padding-bottom: 15px;
 }
