--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -227,8 +227,7 @@
   flex-direction: column;
   align-items: center; /* Vertical centering */
   text-align: center; /* Center align internal elements */
-  background-color: rgb(255, 255, 255);
-  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.95);
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -245,10 +244,7 @@
 }
 
 .Ex-popup-inner1 .ex-text{
-  border-radius: 10px;
-  border : 1px solid #ccc;
-  padding : 20px;
-  background-color :#f6f6f6;
+  margin-bottom: 10px;
   font-family: 'Noto Sans KR', sans-serif;
   text-align: left; /* Left align text */
   width: 100%; /* Ensure full width to left align properly */
