--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -129,7 +129,7 @@ font-style: normal; */
   cursor: pointer;
 }
 
-.styled-link-siginup {
+.styled-link-signup {
   color: black;
   text-decoration: none;
   margin-left: 10px;
