--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -214,3 +214,52 @@
   color: #8d8d8d;
   margin-left: 30px;
 }
+
+.login-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.login-modal-content {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 500;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.login-modal-content button {
+  font-family: 'Noto Sans KR', sans-serif;
+  padding: 4px 25px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.login-modal-content button:nth-of-type(1) {
+  background-color: #2c2c2c; /* 로그인 버튼 배경색 */
+  color: white;
+}
+
+.login-modal-content button:nth-of-type(2) {
+  background-color: #dbdbdb; /* 취소 버튼 배경색 */
+  color: #2c2c2c;
+}
+
+.login-modal-content button:nth-of-type(1):hover {
+  background-color: #5e5e5e; /* hover 시 배경색 변경 */
+  color: #ffffff; /* hover 시 글자색 변경 */
+}
