--- a/src/pages/chatbot/chatbot.css
+++ b/src/pages/chatbot/chatbot.css
@@ -64,3 +64,7 @@
     font-style: italic; /* 로딩 상태의 메시지 글자 스타일 */
   }
 
+  .custom-chatbot input::placeholder {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size:13px;
+  }
