--- a/src/pages/board/mateboard/matedetail.css
+++ b/src/pages/board/mateboard/matedetail.css
@@ -217,3 +217,39 @@
 .comment-container:last-child {
   border-bottom: none;
 }
+
+.delete-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.delete-modal-content {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 500;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.delete-modal-content button {
+  font-family: 'Noto Sans KR', sans-serif;
+  padding: 4px 25px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: #2c2c2c;
+  color: white;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
