--- a/src/pages/board/mateboard/matedetail.css
+++ b/src/pages/board/mateboard/matedetail.css
@@ -42,6 +42,11 @@
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+
+.pre-wrap {
+  white-space: pre-wrap;
+}
+
 .matepost-content {
   font-size: 15px;
   height: 300px;
