--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -9,15 +9,13 @@
 font-weight: 400;
 font-style: normal; */
 
-
 .navbar {
   background-color: white;
   border-bottom-style: solid;
-  border-bottom-color:rgb(198, 198, 198);
-  border-bottom-width: 1px; /* 굵기를 조정할 값 입력 */
+  border-bottom-color: rgb(198, 198, 198);
+  border-bottom-width: 1px;
   padding: 10px;
 }
-
 
 .nav-list-1 {
   list-style-type: none;
@@ -41,7 +39,7 @@ font-style: normal; */
 
 .nav-item {
   margin-right: 13px;
-  position : relative;
+  position: relative;
 }
 
 .auth-item {
@@ -49,9 +47,9 @@ font-style: normal; */
   margin-left: 20px;
 }
 
-.user-item{
+.user-item {
   margin-right: 13px;
-  position : relative;
+  position: relative;
 }
 
 .nav-container {
@@ -80,7 +78,7 @@ font-style: normal; */
   margin-right: 40px;
 }
 
-.styled-user{
+.styled-user {
   color: black;
   text-decoration: none;
   margin-left: 10px;
@@ -100,21 +98,21 @@ font-style: normal; */
   position: absolute;
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  min-width : 200px;
-  padding : 10px;
+  min-width: 200px;
+  padding: 10px;
   border-radius: 20px;
-  z-index: 1000; /* 혹은 다른 고유한 값 */
+  z-index: 1000;
 }
 
-.dropdown-item a{
+.dropdown-item a {
   color: #2c2c2c;
-  padding : 12px 16px;
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
   font-weight: bold;
 }
 
-.dropdown-item a:hover{
+.dropdown-item a:hover {
   background-color: rgb(230, 230, 230);
   border-radius: 15px;
 }
@@ -139,7 +137,7 @@ font-style: normal; */
   cursor: pointer;
 }
 
-.styled-link-logout{
+.styled-link-logout {
   color: black;
   text-decoration: none;
   margin-left: 10px;
@@ -147,4 +145,22 @@ font-style: normal; */
   font-weight: bold;
   font-family: 'Noto Sans KR', sans-serif;
   cursor: pointer;
+}
+
+/* 마이페이지 링크 스타일 추가 */
+.styled-link-mypage {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  background-color: rgba(178, 178, 178, 0.968);
+  padding: 4px 12px;
+  margin-right: 10px;
+  font-size: 0.9rem;
+  border-radius: 8px;
+  font-weight: 500;
+  font-family: 'Noto Sans KR', sans-serif;
+  cursor: pointer;
+}
+
+.styled-link-mypage:hover {
+  color: rgb(54, 54, 54);
 }
