feat:동선 저장 및 수정 상세 사항 수정

--- a/src/pages/mypage/mypage.css
+++ b/src/pages/mypage/mypage.css
@@ -45,6 +45,5 @@
 /* 콘텐츠 영역 스타일 */
 .content {
     flex: 1; /* 사이드바를 제외한 나머지 공간을 채움 */
-    padding: 5px;
-    overflow-y: auto;
+    max-height: 85vh;
 }
