--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -36,6 +36,28 @@
     position: relative;
   }
 
+  .route-save-button {
+    font-family: 'Noto Sans KR', sans-serif;
+    position: absolute; /* 지도 위에 위치시키기 위한 절대 위치 설정 */
+    bottom: 30px; /* 하단 여백 조정 */
+    left: 50%; /* 좌측 여백을 50%로 설정하여 중앙 정렬 */
+    transform: translateX(-50%); /* 버튼을 정확히 중앙에 위치시키기 위해 이동 */
+    background-color: #FEE500; /* 버튼 배경색 설정 */
+    color: #000000;
+    font-weight: 600;
+    border: none; /* 테두리 없음 */
+    border-radius: 100px; /* 버튼 모서리를 둥글게 만듦 */
+    padding: 13px 30px; /* 버튼 내부 여백 설정 */
+    cursor: pointer; /* 커서를 포인터로 변경 */
+    transition: background-color 0.2s ease; /* 배경색 변화에 대한 부드러운 전환 효과 추가 */
+    z-index: 20; /* 다른 요소 위에 위치하도록 설정 */
+  }
+  
+  .route-save-button:hover {
+    background-color:#000000; /* 버튼 배경색 설정 */
+    color: #FEE500;
+  }
+  
   #kakao-map {
     width: 100%; /* 지도의 너비를 화면 너비의 100%로 설정 */
     height: 100%;
@@ -157,7 +179,7 @@
     border-right: 2px solid #ccc; /* 왼쪽에 구분선 추가 */
   }
 
-  .save-button {
+  .search-scrap-button {
     font-family: 'Noto Sans KR', sans-serif;
     position: absolute; /* 절대 위치 설정 */
     bottom: 5px; /* 상단 여백 */
@@ -174,7 +196,7 @@
   }
 
     /* scrap-button 클래스 호버 스타일 */
-  .save-button:hover {
+  .search-scrap-button:hover {
     background-color: #3c3c3c;
     color: #ffffff;
   }
