--- a/src/pages/mypage/review.css
+++ b/src/pages/mypage/review.css
@@ -12,6 +12,7 @@
 
 /* 왼쪽 패널 스타일링 */
 .left-panel {
+  font-family: 'Noto Sans KR', sans-serif;
   width: 25%;
   border-right: 1px solid #e0e0e0;
   padding: 15px;
@@ -21,6 +22,7 @@
 }
 
 .route-header {
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 22px;
   font-weight: bold;
   color: #333;
@@ -35,6 +37,7 @@
 }
 
 .route-item-container {
+  font-family: 'Noto Sans KR', sans-serif;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -54,13 +57,15 @@
 }
 
 .route-delete-button {
+  font-family: 'Noto Sans KR', sans-serif;
   background-color: #ff6f6f;
   color: white;
   border: none;
-  border-radius: 8px;
+  border-radius: 6px;
   padding: 5px 10px;
   font-size: 14px;
   cursor: pointer;
+  margin-right: 10px;
   transition: background-color 0.3s, transform 0.2s;
 }
 
@@ -72,7 +77,7 @@
 /* 오른쪽 패널 스타일링 */
 .right-panel {
   width: 75%;
-  padding: 20px;
+  padding: 25px;
   display: flex;
   flex-direction: column;
   position: relative; /* To position the absolute button */
@@ -119,6 +124,7 @@
 }
 
 .place-number {
+  font-family: 'Noto Sans KR', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -146,10 +152,11 @@
 }
 
 .rating, .memo {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .rating-label, .memo-label {
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 16px;
   font-weight: bold;
   color: #555;
@@ -157,10 +164,11 @@
 }
 
 .memo-content, .memo-textarea, .memo-placeholder {
+  font-family: 'Noto Sans KR', sans-serif;
   border: 1px solid #ddd;
   padding: 10px;
   width: 100%;
-  min-height: 500px; /* Minimum height for the comment area */
+  min-height: 420px; /* Minimum height for the comment area */
   border-radius: 8px;
   box-sizing: border-box;
   font-size: 16px;
@@ -170,42 +178,54 @@
 }
 
 .memo-placeholder {
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 16px;
   color: #999;
 }
 
 .memo-textarea {
+  font-family: 'Noto Sans KR', sans-serif;
   resize: none; /* Prevent resizing */
   overflow: auto; /* Show scrollbars if needed */
 }
 
 .route-input {
+  font-family: 'Noto Sans KR', sans-serif;
+  width: 50%;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-size: 20px;
+  height: 20px; /* Fixed height */
+  margin-bottom: 5px;
+}
+
+.route-input2 {
+  font-family: 'Noto Sans KR', sans-serif;
   width: 100%;
-  padding: 12px;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-sizing: border-box;
   font-size: 16px;
-  margin-bottom: 15px;
 }
 
 .comment-button {
-  padding: 8px 16px; /* Smaller button size */
+  font-family: 'Noto Sans KR', sans-serif;
+  padding: 8px 20px; /* Smaller button size */
   font-size: 14px; /* Smaller font size */
   color: #fff;
-  background-color: #007bff;
+  background-color: #000000;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s;
+  transition: background-color 0.3s;
   position: absolute; /* Position absolutely to the container */
-  bottom: 20px; /* Position 20px from the bottom */
-  right: 20px; /* Position 20px from the right */
+  bottom: 0px;
+  right: 0px; /* Position 20px from the right */
 }
 
 .comment-button:hover {
-  background-color: #0056b3;
-  transform: scale(1.02);
+  background-color: #242424;
 }
 
 .no-selection {
