feat:동선route_order패치, null값 해결, 실시간 업데이트

--- a/src/pages/mypage/review.css
+++ b/src/pages/mypage/review.css
@@ -163,7 +163,7 @@
   margin-bottom: 5px;
 }
 
-.memo-content, .memo-textarea, .memo-placeholder {
+.memo-content, .memo-textarea {
   font-family: 'Noto Sans KR', sans-serif;
   border: 1px solid #ddd;
   padding: 10px;
