Fix: 주변장소 마커 수정

--- a/src/pages/mypage/moreplace.css
+++ b/src/pages/mypage/moreplace.css
@@ -23,6 +23,7 @@
     flex: 3.5; /*가로길이 조절*/
     position: relative;
     height: 100%; /* 전체 화면 높이에 맞춤 */
+    margin-left: 10px;
 }
   
 .place2-box {
